--- a/assets/pages/header.html
+++ b/assets/pages/header.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,16 +25,12 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/main.css">
 
-    <title>Ameria | Azerbaijan</title>
+    <title>Document</title>
 </head>
-
 <body>
+    
 
-    <nav id="nav">
-        <div class="container">
 
-        </div>
-    </nav>
     
 
 
@@ -53,5 +47,4 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
