--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Ameria | Azerbaijan</title>
 </head>
