--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -33,16 +33,27 @@
 <body>
     <section id="contact" class="py-5">
         <div class="container py-5 my-5">
-            <div class="row gx-5 d-flex justify-content-center">
+            <div class="row gx-5 d-flex justify-content-center align-items-center my-3 py-3">
                 <div class="col-lg-6 col-xl-6 col-xxl-6 col-sm-12">
-                    <div class="container contact-left px-0">
+                    <div class="container contact-left px-0 mb-5">
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                        <div class="map py-5 px-5">
+                            <span><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</span>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1914.6297823171155!2d49.84811202996307!3d40.38037160412463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307debe542010b%3A0x4a5deb4b109012d6!2sTur!5e0!3m2!1sen!2s!4v1652009640655!5m2!1sen!2s"
+                                style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade" class="mt-5"></iframe>
+                        </div>
                         <div class="head-text">
                             <span>Hey there</span>
                             <h2>Let's Get In Touch</h2>
                         </div>
                         <div class="contact-info">
                             <ul class="px-0">
-                                <li class="my-5"><i class="bi bi-geo-alt me-4"></i> 2972 Westheimer Rd. colombo</li>
+                                <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</li>
                                 <li class="my-5"><i class="bi bi-envelope me-4"></i> just.hiking@gmail.com</li>
                                 <li class="my-5"><i class="bi bi-telephone me-4"></i> (308) 555-0121</li>
                             </ul>
@@ -69,8 +80,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-12">
-
+                <div class="col-lg-6 col-xl-6 col-xxl-6 col-sm-12">
+                    <div class="container contact-right py-5">
+                        <form action="">
+                            <h2 class="mb-4">Contact Us</h2>
+                            <div class="mb-3">
+                                <input type="text" class="form-control form-element px-4" id="exampleFormControlInput1"
+                                    placeholder="Full Name">
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control form-element px-4" id="exampleFormControlInput1"
+                                    placeholder="Email">
+                            </div>
+                            <div class="mb-3">
+                                <textarea class="form-control form-element px-4" id="exampleFormControlTextarea1"
+                                    rows="4" placeholder="Message ......"></textarea>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
