Change class names

--- a/assets/pages/footer.html
+++ b/assets/pages/footer.html
@@ -50,7 +50,7 @@
                         <label for="email"><button class="text-white" content: '\2192'></button></label>
                      </div>
 
-                     <div class="col-12 my-5 footerMain">
+                     <div class="col-12 my-5 footer-main">
                         <a href="#about-us">About Us</a>
                         <a href="#benefits">Benefits</a>
                         <a href="#hikes">Hikes</a>
@@ -62,7 +62,7 @@
                     <hr>
                     <div class="col-12 my-5 text-center align-items-center">
                         
-                        <ul class="FooterSocialIcons">
+                        <ul class="footer-social-icons">
                             
                             <li>
                                 <i class="bi bi-twitter"></i>
