Optimize member size

--- a/assets/pages/footer.html
+++ b/assets/pages/footer.html
@@ -46,18 +46,19 @@
 
                      <div class="col-12 my-5 input text-center align-items-center">
                         <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
-                        <input type="text" placeholder="Email address" name="email" id="Email">
+                        <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
                         <label for="email"><button class="text-white" content: '\2192'></button></label>
                      </div>
 
                      <div class="col-12 my-5 footer-main">
-                        <a href="#about-us">About Us</a>
-                        <a href="#benefits">Benefits</a>
-                        <a href="#hikes">Hikes</a>
-                        <a href="#stories">Stories</a>
-                        <a href="#contact">Contact</a>
-                        <a href="#privacy-policy">Privacy policy</a>
-                        <a href="#terms">Terms</a>
+                        <div class="row gy-3">
+                            <a href="#about-us" class="col-sm-12 col-lg-2">About Us</a>
+                            <a href="#benefits" class="col-sm-12 col-lg-2">Benefits</a>
+                            <a href="#hikes" class="col-sm-12 col-lg-2">Hikes</a>
+                            <a href="#stories" class="col-sm-12 col-lg-2">Stories</a>
+                            <a href="#contact" class="col-sm-12 col-lg-2">Contact</a>
+                            <a href="#privacy-policy" class="col-sm-12 col-lg-2">Terms</a>
+                        </div>
                     </div>
                     <hr>
                     <div class="col-12 my-5 text-center align-items-center">
