added map toggle feature

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -33,32 +33,32 @@
 <body>
     <section id="contact" class="py-5">
         <div class="container py-5 my-5">
-            <div class="row gx-5 d-flex justify-content-center align-items-center my-3 py-3">
+            <div class="row gx-5 d-flex justify-content-center my-3 py-3">
                 <div class="col-lg-6 col-xl-6 col-xxl-6 col-sm-12">
                     <div class="container contact-left px-0 mb-5">
-                        <label class="switch">
-                            <input type="checkbox">
+                        <label class="switch mt-4 mb-5">
+                            <input type="checkbox" class="clicker">
                             <span class="slider round"></span>
                         </label>
-                        <div class="map py-5 px-5">
+                        <div class="map px-5">
                             <span><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</span>
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1914.6297823171155!2d49.84811202996307!3d40.38037160412463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307debe542010b%3A0x4a5deb4b109012d6!2sTur!5e0!3m2!1sen!2s!4v1652009640655!5m2!1sen!2s"
                                 style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade" class="mt-5"></iframe>
+                                referrerpolicy="no-referrer-when-downgrade" class="mt-2"></iframe>
                         </div>
-                        <div class="head-text">
+                        <div class="head-text ">
                             <span>Hey there</span>
                             <h2>Let's Get In Touch</h2>
                         </div>
-                        <div class="contact-info">
+                        <div class="contact-info ">
                             <ul class="px-0">
                                 <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</li>
                                 <li class="my-5"><i class="bi bi-envelope me-4"></i> just.hiking@gmail.com</li>
                                 <li class="my-5"><i class="bi bi-telephone me-4"></i> (308) 555-0121</li>
                             </ul>
                         </div>
-                        <div class="socials ps-3">
+                        <div class="socials ps-3 ">
                             <div class="row">
                                 <div class="col-3 icon-holder d-flex justify-content-center align-items-center me-2">
                                     <a class="fb d-flex justify-content-center align-items-center"><i
@@ -105,7 +105,7 @@
 
 
     <!-- js -->
-    <script src="./assets/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
