fixed overlaping bug and added some small changes

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -54,7 +54,7 @@
                         <div class="contact-info ">
                             <ul class="px-0">
                                 <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</li>
-                                <li class="my-5"><i class="bi bi-envelope me-4"></i> just.hiking@gmail.com</li>
+                                <li class="my-5"><i class="bi bi-envelope me-4"></i> ameria@gmail.com</li>
                                 <li class="my-5"><i class="bi bi-telephone me-4"></i> (308) 555-0121</li>
                             </ul>
                         </div>
