--- a/assets/pages/footer.html
+++ b/assets/pages/footer.html
@@ -62,6 +62,10 @@
                     </div>
                     <hr>
                     <div class="col-12 my-5 text-center align-items-center">
+
+                        <div class="mb-3">
+                            <span class="text-white">Community</span>
+                        </div>
                         
                         <ul class="footer-social-icons">
                             
