Rengleri, responsivliyi ve sizelarin deyisdirilmesi

--- a/assets/pages/footer.html
+++ b/assets/pages/footer.html
@@ -31,12 +31,19 @@
 </head>
 
 <body>
+
+    <nav id="nav">
+        <div class="container">
+
+        </div>
+    </nav>
+    
     <footer>
         <section class="footer">
             <div class="container">
                 <div class="row gx-5 text-center align-items-center">
                     <div class="col-12 my-5 join">
-                       <h2 class="text-white">Footer</h2>
+                       <h2 class="text-white footer-text">Footer</h2>
                        <hr>
                     </div>
 
@@ -47,23 +54,23 @@
                      <div class="col-12 my-5 input text-center align-items-center">
                         <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
                         <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
-                        <label for="email"><button class="text-white" content: '\2192'></button></label>
+                        <label for="email"><button class="text-white email-button" content: '\2192'></button></label>
                      </div>
 
                      <div class="col-12 my-5 footer-main">
                         <div class="row gy-3">
-                            <a href="#about-us" class="col-sm-12 col-lg-2">About Us</a>
-                            <a href="#benefits" class="col-sm-12 col-lg-2">Benefits</a>
-                            <a href="#hikes" class="col-sm-12 col-lg-2">Hikes</a>
-                            <a href="#stories" class="col-sm-12 col-lg-2">Stories</a>
-                            <a href="#contact" class="col-sm-12 col-lg-2">Contact</a>
-                            <a href="#privacy-policy" class="col-sm-12 col-lg-2">Terms</a>
+                            <a href="#about-us" class="col-sm-4 col-lg-2">About Us</a>
+                            <a href="#benefits" class="col-sm-4 col-lg-2">Benefits</a>
+                            <a href="#hikes" class="col-sm-4 col-lg-2">Hikes</a>
+                            <a href="#stories" class="col-sm-4 col-lg-2">Stories</a>
+                            <a href="#contact" class="col-sm-4 col-lg-2">Contact</a>
+                            <a href="#privacy-policy" class="col-sm-4 col-lg-2">Terms</a>
                         </div>
                     </div>
                     <hr>
                     <div class="col-12 my-5 text-center align-items-center">
 
-                        <div class="mb-3">
+                        <div class="mb-3 community">
                             <span class="text-white">Community</span>
                         </div>
                         
@@ -99,12 +106,13 @@
                                 Copyright 2022 by Refsnes Data. All Rights Reserved.
                             </span>
                         </div>
-                            <img src="../img/logo.png">    
+                            <img class="footer-logo" src="../img/Logo.png">    
                         </div>                    
                 </div>
             </div>
         </section>
     </footer>
+
     <!-- js -->
     <script src="./assets/js/script.js"></script>
     <!-- bootstrap -->
@@ -118,4 +126,5 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
