--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>About</title>
-    <link rel="stylesheet" href="../css/main.css" class="" />
+    <link rel="stylesheet" href="../css/main.css"/>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
             <div class="col-12 col-lg-6 mb-4 mb-lg-0">
               <div class="img-head">
                 <img
-                  src="../images/couple-hiking-mountain-climbing-1296x728-header.webp"
+                  src="../img/couple-hiking-mountain-climbing-1296x728-header.webp"
                   alt=""
                 />
               </div>
