--- a/assets/pages/hikes.html
+++ b/assets/pages/hikes.html
@@ -187,6 +187,80 @@
 
 
     <!-- footer -->
+    <footer>
+        <section class="footer">
+            <div class="container">
+                <div class="row gx-5 text-center align-items-center">
+                    <div class="col-12 mb-3 join">
+                        <h2 class="text-white footer-text">AMERIA</h2>
+
+                    </div>
+                    <hr>
+                    <div class="col-12 my-1 text-span">
+                        <span>Subscribe To Our Newsletter</span>
+                    </div>
+
+                    <div class="col-12 my-4 input text-center align-items-center">
+                        <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
+                        <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
+                        <label for="email"><button class="text-white email-button" content: '\2192'></button></label>
+                    </div>
+
+                    <div class="col-12 my-4 footer-main">
+                        <div class="row gy-3">
+                            <a href="#about-us" class="col-sm-4 col-lg-2">About Us</a>
+                            <a href="#benefits" class="col-sm-4 col-lg-2">Benefits</a>
+                            <a href="#hikes" class="col-sm-4 col-lg-2">Hikes</a>
+                            <a href="#stories" class="col-sm-4 col-lg-2">Stories</a>
+                            <a href="#contact" class="col-sm-4 col-lg-2">Contact</a>
+                            <a href="#privacy-policy" class="col-sm-4 col-lg-2">Terms</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="col-12 my-1 text-center align-items-center">
+
+                        <div class="mb-3 community">
+                            <span class="text-white">Community</span>
+                        </div>
+
+                        <ul class="footer-social-icons">
+
+                            <li>
+                                <i class="bi bi-twitter"></i>
+                            </li>
+
+                            <li>
+                                <i class="bi bi-facebook"></i>
+                            </li>
+
+                            <li>
+                                <i class="bi bi-linkedin"></i>
+                            </li>
+
+                            <li>
+                                <i class="bi bi-instagram"></i>
+                            </li>
+                        </ul>
+
+                        <div class="info-about-site mt-5">
+                            <span class="text-white">Ameria is optimized for traveling and getting
+                                to know the world better. Ameria is constantly
+                                reviewed to avoid errors in ticket prices, offers,
+                                or any part, but we cannot guarantee the accuracy of
+                                all content. <br> By using Ameia, you read and agree to our
+                                terms of use and privacy policy.</span>
+                        </div>
+                        <div class="info-about-site mt-3">
+                            <span class="text-white">
+                                Copyright 2022 by Refsnes Data. All Rights Reserved.
+                            </span>
+                        </div>
+                        <img class="footer-logo" src="../img/Logo.png">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 
 
