--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -42,7 +42,7 @@
                                 <span class="slider round"></span>
                             </label>
                             <div class="map px-5">
-                                <span><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</span>
+                                <span><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Garden</span>
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1914.6297823171155!2d49.84811202996307!3d40.38037160412463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307debe542010b%3A0x4a5deb4b109012d6!2sTur!5e0!3m2!1sen!2s!4v1652009640655!5m2!1sen!2s"
                                     style="border:0;" allowfullscreen="" loading="lazy"
@@ -54,7 +54,7 @@
                             </div>
                             <div class="contact-info ">
                                 <ul class="px-0">
-                                    <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Bağı</li>
+                                    <li class="my-5"><i class="bi bi-geo-alt me-4"></i> Nikola Tesla Garden</li>
                                     <li class="my-5"><i class="bi bi-envelope me-4"></i> ameria@gmail.com</li>
                                     <li class="my-5"><i class="bi bi-telephone me-4"></i> (308) 555-0121</li>
                                 </ul>
@@ -89,7 +89,15 @@
                         <div class="container contact-right py-5">
                             <form action="">
                                 <h2 class="mb-4">Contact Us</h2>
-                                <div class="mb-3">
+
+                                <div class="form-input">
+                                    <input type="text" name="name" class="pt-5">
+                                    <label for="name" class="label-name">
+                                        <span class="content-name">Full Name</span>
+                                    </label>
+                                </div>
+
+                                <!-- <div class="mb-3">
                                     <input type="text" class="form-control form-element px-4"
                                         id="exampleFormControlInput1" placeholder="Full Name">
                                 </div>
@@ -100,7 +108,10 @@
                                 <div class="mb-3">
                                     <textarea class="form-control form-element px-4" id="exampleFormControlTextarea1"
                                         rows="4" placeholder="Message ......"></textarea>
-                                </div>
+                                </div> -->
+                                <!-- <div class="d-grid gap-2">
+                                    <button class="btn sub-btn" type="submit">Submit</button>
+                                </div> -->
                             </form>
                         </div>
                     </div>
