--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -137,19 +137,28 @@
         <section class="footer">
             <div class="container">
                 <div class="row gx-5 text-center align-items-center">
-                    <div class="col-12 mb-3 join">
+                    <div class="col-12 my-3 join">
                         <h2 class="text-white footer-text">AMERIA</h2>
-
+                        <hr>
                     </div>
-                    <hr>
+
                     <div class="col-12 my-1 text-span">
                         <span>Subscribe To Our Newsletter</span>
                     </div>
 
-                    <div class="col-12 my-4 input text-center align-items-center">
-                        <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
+                    <!-- col-sm-12 col-md-12 col-xl-12 col-xxl-12 col-lg-12 => lazim olsa -->
+                    <!-- <div class="col-12 my-5 input text-center align-items-center">
                         <input type="text" placeholder="Email" autocomplete="off" name="email" id="Email">
                         <label for="email"><button class="text-white email-button" content: '\2192'></button></label>
+                     </div> -->
+
+                    <div class="col-12  my-4 input-group input">
+                        <input type="text" class="form-control" placeholder="Email" aria-label="Email"
+                            aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <span class="input-group-text text-white arrow-span" id="basic-addon2"><i
+                                    class="bi bi-arrow-right"></i></span>
+                        </div>
                     </div>
 
                     <div class="col-12 my-4 footer-main">
