--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -102,8 +102,8 @@
                                         <span class="content-name">Email</span>
                                     </label>
                                 </div>
-                                <div class="form-area mb-5">
-                                    <textarea class="" id="exampleFormControlTextarea1" rows="5" required
+                                <div class="form-area mb-4 mt-3">
+                                    <textarea class="" id="exampleFormControlTextarea1" rows="3" required
                                         name="area"></textarea>
                                     <label for="area" class="label-text">
                                         <span class="content-text">Message ......</span>
