header and navigation is done

--- a/index.html
+++ b/index.html
@@ -32,13 +32,41 @@
 
 <body>
 
-    <nav id="nav">
+    <header>
         <div class="container">
-
+            <div class="row d-flex align-items-center">
+                <div class="col-6 col-lg-4 logo">
+                    <a href="#">AMERIA</a>
+                </div>
+                <div class="col-6 col-lg-8 side-menu d-flex justify-content-end">
+                    <div class="side-menu-toggle">
+                        <i class="bi bi-list open-btn"></i>
+                        <i class="bi bi-x-lg close-btn"></i>
+                    </div>
+                    <nav class="hidden">
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Events</a></li>
+                            <li><a href=""></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-    </nav>
-    
+    </header>
 
+    <section id="hero" style="background-image: url('./assets/images/azerbaijan-nature-with-flag.jpeg');">
+        <div class="cover"></div>
+        <div class="container">
+            <div class="hero-content">
+                <p>Welcome</p>
+                <h1>EXPLORE AZERBAIJAN <br> WITH US</h1>
+                <button>Discover Places</button>
+            </div>
+        </div>
+    </section>
 
     <!-- js -->
     <script src="./assets/js/script.js"></script>
